--- a/Calendar/calendar.css
+++ b/Calendar/calendar.css
@@ -80,3 +80,6 @@
 .cn-canlendar-container .week-item.today{
     box-shadow: inset 0 0 0 1px #2d8cf0;
 }
+.cn-canlendar-container .week-item.acitve{
+	background-color: #2d8cf0;
+}
